deploy/devspace/custom-resources/joke-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-server
  namespace: dev
  labels:
    app: joke-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: joke-server
