deploy/devspace/custom-resources/mongodb-milan.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-external
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: mongodb-svc
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
