deploy/devspace/custom-resources/mongodb-nlb-milan.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-milan-nlb
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    external-dns.alpha.kubernetes.io/hostname: mongodb-milan.internal.k8sdr.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: LoadBalancer
  selector:
    app: mongodb-svc
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
